further improved adv search styles

--- a/app/guitars/partials/advancedSearch.html
+++ b/app/guitars/partials/advancedSearch.html
@@ -56,20 +56,20 @@
                             <label class="guitarRadio">
                                 Guitar
                                 <span ng-show="guitarBass === 'guitar'">
-                                    <i class="far fa-circle honk"></i>
+                                    <i class="far fa-circle fa-sm honk"></i>
                                 </span>
                                 <span ng-show="guitarBass !== 'guitar'">
-                                    <i class="far fa-circle"></i>
+                                    <i class="far fa-circle fa-sm"></i>
                                 </span>
                                 <input class="guitarRadioButton" ng-model="guitarBass" value="guitar" type="radio" name="guitarOrBass">
                             </label>
                             <label class="bassRadio">
                                 Bass
                                 <span ng-show="guitarBass === 'bass'">
-                                    <i class="far fa-circle honk"></i>
+                                    <i class="far fa-circle fa-sm honk"></i>
                                 </span>
                                 <span ng-show="guitarBass !== 'bass'">
-                                    <i class="far fa-circle"></i>
+                                    <i class="far fa-circle fa-sm"></i>
                                 </span>
                                 <input ng-model="guitarBass" value="bass" type="radio" name="guitarOrBass">
                             </label>
@@ -83,20 +83,20 @@
                             <label class="electricButton">
                                 Electric
                                 <span ng-show="electricAcoustic === 'electric'">
-                                    <i class="far fa-circle honk"></i>
+                                    <i class="far fa-circle fa-sm honk"></i>
                                 </span>
                                 <span ng-show="electricAcoustic !== 'electric'">
-                                    <i class="far fa-circle"></i>
+                                    <i class="far fa-circle fa-sm"></i>
                                 </span>
                                 <input ng-model="electricAcoustic" value="electric" type="radio" name="guitarType">
                             </label>
                             <label class="acousticButton">
                                 Acoustic
                                 <span ng-show="electricAcoustic === 'acoustic'">
-                                    <i class="far fa-circle honk"></i>
+                                    <i class="far fa-circle fa-sm honk"></i>
                                 </span>
                                 <span ng-show="electricAcoustic !== 'acoustic'">
-                                    <i class="far fa-circle"></i>
+                                    <i class="far fa-circle fa-sm"></i>
                                 </span>
                                 <input ng-model="electricAcoustic" value="acoustic" type="radio" name="guitarType">
                             </label>
@@ -126,20 +126,20 @@
                                 <label class="vintageYesButton">
                                     Yes
                                     <span ng-show="vintageCheck === 'yes'">
-                                        <i class="far fa-circle honk"></i>
+                                        <i class="far fa-circle fa-sm honk"></i>
                                     </span>
                                     <span ng-show="vintageCheck !== 'yes'">
-                                        <i class="far fa-circle"></i>
+                                        <i class="far fa-circle fa-sm"></i>
                                     </span>
                                     <input ng-model="vintageCheck" value="yes" type="radio" name="vintageSelect">
                                 </label>
                                 <label class="vintageNoButton">
                                     No
                                     <span ng-show="vintageCheck === 'no'">
-                                        <i class="far fa-circle honk"></i>
+                                        <i class="far fa-circle fa-sm honk"></i>
                                     </span>
                                     <span ng-show="vintageCheck !== 'no'">
-                                        <i class="far fa-circle"></i>
+                                        <i class="far fa-circle fa-sm"></i>
                                     </span>
                                     <input ng-model="vintageCheck" value="no" type="radio" name="vintageSelect">
                                 </label>
